<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Orientation Lock2</string>
    <string name="orientation_dynamic">Dynamic</string>
    <string name="orientation_default">Default</string>
    <string name="orientation_full_sensor">Full sensor</string>
    <string name="orientation_landscape">Landscape</string>
    <string name="orientation_reverse_landscape">Reverse landscape</string>
    <string name="orientation_sensor_landscape">Sensor landscape</string>
    <string name="orientation_portrait">Portrait</string>
    <string name="orientation_reverse_portrait">Reverse portrait</string>
    <string name="orientation_sensor_portrait">Sensor portrait</string>
    <string name="running_notification_channel_name">Running Notification</string>
    <string name="running_notification_title">Orientation Lock is running</string>
    <string name="running_notification_description">Orientation Lock is running for keeping the orientation</string>
    <string name="permission_required">Please grant draw over apps permission</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="quick_recovery_title">Quick Recovery Notification</string>
    <string name="quick_recovery_desc">When enabled, a system notification will be sent when you select a direction other than the default. Tap it to restore the default orientation.</string>
    <string name="quick_recovery_notification_title">Orientation Locked</string>
    <string name="quick_recovery_notification_text">Tap to restore default orientation</string>
    <string name="channel_quick_recovery_name">Quick Recovery</string>
    <string name="channel_quick_recovery_desc">Used for quickly restoring the default screen orientation</string>
    <string name="tile_label">Orientation</string>
    <string name="tile_settings_title">Tile Target Orientation</string>
    <string name="tile_settings_desc">Select the orientation applied when tapping the quick settings tile</string>
    <string name="floating_button_title">Sensor Floating Button</string>
    <string name="floating_button_desc">Show a floating button on screen, tap to rotate to current sensor orientation</string>
    <string name="floating_button_position_title">Adjust Floating Button Position</string>
    <string name="floating_button_position_desc">Tap to adjust the floating button position on screen</string>
    <string name="floating_button_edit_hint">Drag the button to adjust its position\nTap Save or Cancel when done</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="position_saved">Position saved</string>
    <string name="battery_optimization_title">Ignore Battery Optimizations</string>
    <string name="battery_optimization_desc">Tap to allow the app to run in the background</string>
    <string name="battery_optimization_desc_ignored">The app is allowed to run in the background</string>
    <string name="battery_optimization_status_ignored">Allowed</string>
    <string name="battery_optimization_status_not_ignored">Restricted</string>
    <string name="battery_optimization_already_ignored">Already allowed</string>
    <string name="battery_optimization_dialog_title">Background Restriction</string>
    <string name="battery_optimization_dialog_message">To ensure the orientation lock service keeps running in the background, please disable battery optimization for this app.</string>
    <string name="go_to_settings">Go to Settings</string>
</resources>